--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   "homepage": "https://github.com/maxiderecho/funkoshop-clonado#readme",
   "dependencies": {
     "dotenv": "^16.3.2",
-    "express": "^4.18.2"
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "method-override": "^3.0.0",
+    "mysql2": "^3.8.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
