--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   },
   "homepage": "https://github.com/maxiderecho/funkoshop-clonado#readme",
   "dependencies": {
+    "cookie-session": "^2.1.0",
     "dotenv": "^16.3.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "method-override": "^3.0.0",
     "mysql2": "^3.8.0"
   },
