--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "method-override": "^3.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.8.0"
   },
   "devDependencies": {
