--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
   "homepage": "https://github.com/maxiderecho/funkoshop-clonado#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cookie-session": "^2.1.0",
     "dotenv": "^16.3.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
     "method-override": "^3.0.0",
     "multer": "^1.4.5-lts.1",
