--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/maxiderecho/funkoshop-clonado#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
